src/test/deca/context/invalid/sansObj/add-int-string.deca
// Description:
//    Addition entre un entier et un string
//
// Résultat:
//Opération entre 2 objets de types incompatibles
//

{
   int a;
   a = a + "string";
}